# SageEats

./: .gitignore  README.md  app.config.js  app.json  eas.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.expo/types/: router.d.ts
api/: .env  database.py  main.py
api/models/: models.py
api/routers/: allergens.py  location.py  menu.py  menu_items.py  restaurants.py  users.py
api/schemas/: schemas.py
app/: +not-found.tsx  _layout.tsx  about.tsx  index.tsx
app/(tabs)/: _layout.tsx  index.tsx  profile.tsx  search.tsx
app/components/: GoogleMapComponent.tsx  RestaurantList.tsx  SafePlatesHeader.tsx  SearchBar.tsx
components/: GoogleMapComponent.tsx  RestaurantList.tsx
types/: index.ts
