[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["keisha.mukasa@gmail.com"]
readme = "README.md"
packages = [
    { include = "**/*.py" }
]

[tool.ruff]
exclude = [
  "app/*",
  "node_modules",
  ".venv"
]
line-length = 88
target-version = "py311"

[tool.black]
exclude = '''
/(
  app/
  | node_modules
  | \.venv
)/
'''

[tool.mypy]
exclude = "app/frontend"
strict = true

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
sqlalchemy = ">=2.0.40,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
pydantic = {extras = ["email"], version = "^2.11.4"}
alembic = ">=1.15.2,<2.0.0"
datetime = "^5.5"
geoalchemy2 = "^0.17.1"
shapely = "^2.1.0"

[tool.poetry.scripts]
dev = "uvicorn api.main:app --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
black = "^25.1.0"
mypy = "^1.15.0"

